[gd_scene load_steps=5 format=3 uid="uid://bvt15mdxkb2ke"]

[ext_resource type="Script" path="res://revolverTank.gd" id="1_hdl0g"]
[ext_resource type="Texture2D" uid="uid://dwmth1sc1chon" path="res://towerDefense_tile180.png" id="2_p3ycd"]
[ext_resource type="Texture2D" uid="uid://bn2ateub7oufv" path="res://towerDefense_tile205.png" id="3_b3oey"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rucrg"]
radius = 863.99

[node name="Revolver" type="Node2D"]
script = ExtResource("1_hdl0g")

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(11.25, 11.25)
scale = Vector2(5, 5)
texture = ExtResource("2_p3ycd")

[node name="Turret" type="Sprite2D" parent="."]
position = Vector2(10, 4.00001)
scale = Vector2(5, 5)
texture = ExtResource("3_b3oey")

[node name="Flame3" type="Marker2D" parent="Turret"]
position = Vector2(37, -18.8)
scale = Vector2(0.736, 1)

[node name="Flame" type="Marker2D" parent="Turret"]
position = Vector2(37, -0.399999)
scale = Vector2(0.735934, 1)

[node name="Flame2" type="Marker2D" parent="Turret"]
position = Vector2(36, 20.4)
scale = Vector2(0.736, 1)

[node name="Range" type="Area2D" parent="."]
position = Vector2(-1.52588e-05, 2.00001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_rucrg")

[node name="AmmoBar" type="ProgressBar" parent="."]
modulate = Color(0.505882, 0.811765, 0.403922, 1)
custom_minimum_size = Vector2(300, 50)
offset_left = -139.0
offset_top = -141.0
offset_right = 161.0
offset_bottom = -91.0
show_percentage = false

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered" flags=18]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited" flags=18]
